# proteomics-viewer

./: .gitignore  CHANGELOG.md  Install_Windows.bat  Install_macOS.command  MANIFEST.in  README.md  pyproject.toml
.github/workflows/: publish.yml
proteomicsviewer/: __init__.py  __main__.py  cli.py  icon.py  install_shortcut.py
proteomicsviewer/server/: main.py  parser.py  plots.py  state.py
proteomicsviewer/server/templates/: index.html  proker-charts.js
