[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "proker"
version = "3.6.0"
description = "Pro-ker Proteomics Analysis — an interactive browser-based proteomics data visualization tool"
readme = "README.md"
license = "LicenseRef-Proprietary"
requires-python = ">=3.10"
authors = [
    {name = "Billy Ngo", email = "billy.ngo0108@gmail.com"},
]
keywords = ["proteomics", "mass-spectrometry", "visualization", "MaxQuant", "bioinformatics", "pro-ker"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
]
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "python-multipart>=0.0.9",
]

[project.scripts]
proker = "proteomicsviewer.cli:main"

[project.urls]
Homepage = "https://github.com/billy-ngo/proteomics-viewer"
Repository = "https://github.com/billy-ngo/proteomics-viewer"

[tool.setuptools.packages.find]
include = ["proteomicsviewer*"]

[tool.setuptools.package-data]
proteomicsviewer = [
    "server/templates/*",
    "server/templates/**/*",
    "server/**/*.py",
    "server/api/**/*.py",
]
